src/vs/workbench/contrib/positronNotebook/browser/notebookCells/NotebookCellActionBar.css
/*---------------------------------------------------------------------------------------------
 *  Copyright (C) 2024-2025 Posit Software, PBC. All rights reserved.
 *  Licensed under the Elastic License 2.0. See LICENSE.txt for license information.
 *--------------------------------------------------------------------------------------------*/
.positron-notebooks-cell-action-bar {
	position: absolute;
	top: calc(var(--vscode-positronNotebook-action-bar-inset) * -1);
	right: var(--vscode-positronNotebook-action-bar-inset);
	z-index: 10;
	border-width: 1px;
	border-color: var(--vscode-positronNotebook-action-bar-border-color);
	border-style: solid;
	border-radius: var(--vscode-positronNotebook-cell-radius);
	background-color: var(--vscode-positronNotebook-action-bar-background);
	display: flex;
	gap: 0.25rem;

	&.visible {
		visibility: visible;
	}

	&.hidden {
		visibility: hidden;
	}

	.action-button {
		aspect-ratio: 1;
		display: grid;
		place-content: center;
		padding: 3px;
		/* The added outline here is distracting */
		outline: revert;

		/* Update the border radius so it fits cleanly with the inset on the containing box. The 1px
		comes from the border of that box */
		border-radius: calc(var(--vscode-positronNotebook-cell-radius) - 1px);

		.button-icon {
			align-items: center;
			justify-content: center;
			display: flex;
			width: 16px;
			aspect-ratio: 1;
		}

		&.disabled {
			color: var(--vscode-positronActionBar-disabledForeground);
		}
	}
}

